Use oapi for query params and replace mongo inserts with upserts
