# spec/oapi-spec.yaml
@@ -25,6 +25,10 @@ paths:
     get:
       summary: Return all scans
       operationId: listScans
+      parameters:
+        - $ref: '#/components/parameters/PageParam'
+        - $ref: '#/components/parameters/PageSizeParam'
+
       responses:
         '200':
           description: Scan list response
@@ -145,6 +149,7 @@ components:
           type: string
         version:
           type: string
+
   requestBodies:
     ScanBody:
       description: JSON of new Scan
@@ -153,3 +158,19 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/NewScan'
+
+  parameters:
+    PageParam:
+      name: page
+      in: query
+      description: page number for pagination
+      required: false
+      schema:
+        type: string
+    PageSizeParam:
+      name: page_size
+      in: query
+      description: page size for pagination
+      required: false
+      schema:
+        type: string
